added a basic form, buttons now navigate the page

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -15,8 +15,8 @@
     <div class = "jumbotron" style = "text-align: center;">
         <h1>Hot Restaurant</h1>
         <h2>Book your seat before they are all gone!</h2>
-        <button>View Tables</button>
-        <button>Make Reservation</button>
+        <button onclick = "window.location.href = './tables.html'">View Tables</button>
+        <button onclick = "window.location.href = './reserve.html'">Make Reservation</button>
     </div>
     <div class="container">
 
