--- a/Server/public/reserve.html
+++ b/Server/public/reserve.html
@@ -15,11 +15,25 @@
     <div class = "jumbotron" style = "text-align: center;">
         <h1>Hot Restaurant</h1>
         <h2>Book your seat before they are all gone!</h2>
-        <button>View Tables</button>
-        <button>Make Reservation</button>
+        <button onclick = "window.location.href = './tables.html'">View Tables</button>
+        <button onclick = "window.location.href = './reserve.html'">Make Reservation</button>
     </div>
     <div class="container">
-
+        <form>
+            <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control" id="name">
+              </div>
+            <div class="form-group">
+              <label for="email">Email Address</label>
+              <input type="email" class="form-control" id="email">
+            </div>
+            <div class="form-group">
+                <label for="phone">Phone Number:</label>
+                <input type="tel" class="form-control" id="phone">
+              </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
     </div>
     <!--Bootstrap Javascript-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
